--- a/package.json
+++ b/package.json
@@ -13,5 +13,11 @@
     "@nuxtjs/tailwindcss": "^6.7.0",
     "@types/node": "^18",
     "nuxt": "^3.5.2"
+  },
+  "dependencies": {
+    "@headlessui/vue": "^1.7.14",
+    "@heroicons/vue": "^2.0.18",
+    "flowbite": "^1.6.5",
+    "sweetalert2": "^11.7.12"
   }
 }
